# src/routes/categories.routes.ts
@@ -1,25 +1,25 @@
 import { Router } from 'express'
 import multer from 'multer'
 
-import  craeteCategoryController  from '../modules/cars/useCases/createCategory'
-import { listCategoriesController } from '../modules/cars/useCases/listCategories'
-import { importCategoryController } from '../modules/cars/useCases/importCategory'
+import { CraeteCategoryController} from '../modules/cars/useCases/createCategory/CreateCategoryController'
+import { ListCategoriesController } from '../modules/cars/useCases/listCategories/ListCategoriesController'
+import { ImportCategoryController } from '../modules/cars/useCases/importCategory/ImportCategoryController'
+
+const craeteCategoryController = new CraeteCategoryController()
+const importCategoryController = new ImportCategoryController()
+const listCategoriesController = new ListCategoriesController()
+
+
 
 const categoriesRoutes = Router()
 const upload = multer({
     dest: "./tmp",
 })
 
-categoriesRoutes.post('/', (request, response)=>{
-    return craeteCategoryController().handle(request,response)
-})
+categoriesRoutes.post('/',craeteCategoryController.handle)
 
-categoriesRoutes.get("/",(request, response)=>{
-    return listCategoriesController.handle(request,response)
-})
+categoriesRoutes.get("/",listCategoriesController.handle)
 
-categoriesRoutes.post("/import",upload.single("file"), (request, response)=>{
-    return importCategoryController.handle(request,response)
-})
+categoriesRoutes.post("/import",upload.single("file"), importCategoryController.handle)
 
 export {categoriesRoutes}
